feat: build with jdk21 (#358)
* ci: upgrade mockito to build with JDK21
* clean: minor changes to overcome deprecations

Signed-off-by: Karl Schrab <karl.schrab@fokus.fraunhofer.de>